--- a/Kaiserreich Korean Translation/localisation/KR_Ethiopia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ethiopia_l_english.yml
@@ -80,28 +80,28 @@ ETH_Levy_Army_desc:0 "에티오피아는 근대의 강대국들과는 달리 통
 
 
 ### Focuses ###
-ETH_Nationalised_Railroad:0 "국유화 된 철도"
-ETH_Privatised_Railroad:0 "민영화 된 철도"
+ETH_Nationalised_Railroad:0 "국유화된 철도"
+ETH_Privatised_Railroad:0 "민영화된 철도"
 ETH_Expand_Railroad:0 "철도 확장"
 ETH_Southern_Expansion:0 "남부 철도 확장"
-ETH_Expand_Into_Eritrea:0 "에리트레아로 향하는 철도 확장"
-ETH_Impose_Amharic:0 "에리트레아에 암하라어를 강요"
-ETH_Tribe_Intergration:0 "부족의 통합"
+ETH_Expand_Into_Eritrea:0 "에리트레아행 철도 확장"
+ETH_Impose_Amharic:0 "에리트레아에 암하라어 강요"
+ETH_Tribe_Intergration:0 "부족 통합"
 ETH_Officer_Intergration:0 "장교 통합"
 ETH_Construct_Naval_Base:0 "아사마라 해군 기지"
 ETH_Intergration_Of_Eritrea:0 "에리트레아 통합"
-ETH_Develop_Eritrea:0 "에리트레아 개발"
-ETH_Invest_In_Industry:0 "산업에 투자"
-ETH_Tribal_Modernisation:0 "부족의 현대화"
+ETH_Develop_Eritrea:0 "에리트레아 개발 "
+ETH_Invest_In_Industry:0 "산업 투자"
+ETH_Tribal_Modernisation:0 "부족 근대화"
 ETH_Southern_Industrial_Expansion:0 "남부 산업 확장"
-ETH_Military_Industrial_Expansion:0 "군수 산업 확장"
+ETH_Military_Industrial_Expansion:0 "군사 산업 확장"
 ETH_German_Investment:0 "독일의 투자"
 ETH_German_Aid:0 "독일의 원조"
-ETH_German_Military_Mission:0 "독일 군사 사절"
-ETH_Debt:0 "우리의 부채를 협상"
-ETH_Tax_Church:0 "교회에 세금 부여"
-ETH_Tax_Slaveowners:0 "노예주에 세금 부과"
-ETH_Tax_Oromo:0 "오로모족에 세금 부과"
+ETH_German_Military_Mission:0 "독일 군사 무관"
+ETH_Debt:0 "채무 대응"
+ETH_Tax_Church:0 "교회에 과세"
+ETH_Tax_Slaveowners:0 "노예주에 과세"
+ETH_Tax_Oromo:0 "오로모인에 과세"
 ETH_Tax_Eritrea:0 "에리트레아에 세금제도를 설명"
 ETH_Budget:0 "예산 재조정"
 ETH_Haile:0 "셀라시에의 개혁"
@@ -171,28 +171,28 @@ ETH_Heavy_Industry:0 "중공업 공사"
 ETH_Coffee:0 "현대화된 커피 수확"
 ETH_Finish_Modernisation:0 "현대화 완료"
 
-ETH_Nationalised_Railroad_desc:0 "We’ve now nationalised our railways, ensuring that they are Imperial property. We will take good care of them, ensuring that the transportation of goods and troops flows swiftly and efficiently."
-ETH_Privatised_Railroad_desc:0 "We will allow the German-owned railways to continue operation under German personnel, however we will continually monitor them, ensuring that their quality remains of the highest calibre."
-ETH_Expand_Railroad_desc:0 "Expanding the current railways is system is crucial to the long term benefit of our nation. Lines of communication, the distribution of goods, and the movement of troops are all equally important and will help our nation prosper. Thankfully, the Emperor understands the importance of transportation."
-ETH_Southern_Expansion_desc:0 "The next step of our railway expansion plan is to connect the southernmost regions of the empire to the rest of our infrastructure and, hopefully, the rest of the nation."
-ETH_Expand_Into_Eritrea_desc:0 "The next step of our railway expansion plan is to connect the empire’s only coastal region, Eritrea, to the rest of the nation, improve the prosperity of people living there, and better manage the flow of goods in the region."
-ETH_Impose_Amharic_desc:0 "Despite not being ethnically homogenous, Eritrea has a significant amount of Tigray elite, which could, potentially, pose a threat to us in the future. We should take steps to ensure that the language barrier does not give them any sort of advantage and drive home the concept that Eritrea is Ethiopia."
-ETH_Tribe_Intergration_desc:0 "We can sway the Eritrean leadership to our side... if we offer them substantial incentives."
-ETH_Officer_Intergration_desc:0 "Many of our veteran fighters had served under the Italians and others under private militias after the Liberation. We should apply the same principles we’d applied then and take steps to seamlessly integrate the Eritrean forces into the Ethiopian military."
-ETH_Construct_Naval_Base_desc:0 "We will spare no expense in the creation of a port in Asamara, which will be so grand, that it will blow away the naval empires of today as it will showcase the true naval strength of the empire!"
-ETH_Intergration_Of_Eritrea_desc:0 "Twenty years later, unrest within Eritrea has almost subsided and the people living within the region are beginning to form an optimistic view of the empire. It seems that, in the near future, potential unrest will begin to decline."
-ETH_Develop_Eritrea_desc:0 "Unlike the Italian imperialists, who had rarely invested in Eritrea, as a show of goodwill, we will begin heavy investments into the region."
-ETH_Invest_In_Industry_desc:0 "Industrialisation is the only way forward. We cannot avoid this crucial policy as the empire requires more factories to boost its production."
-ETH_Tribal_Modernisation_desc:0 "We shall guarantee the rights of tribal groups and other minorities so long as they fulfil their obligations!"
-ETH_Southern_Industrial_Expansion_desc:0 "We shall expand our industrialisation program and create new factories in the southern portion of our nation. That way, profits and jobs from this sector of the economy will be better distributed, boosting both productivity and profit."
-ETH_Military_Industrial_Expansion_desc:0 "As the years go by, it is apparent that our army will require higher quality equipment and adequate supplies. We will begin the mass production of weapons and supplies in order to help our armed forces better defend the empire."
-ETH_German_Investment_desc:0 "Since we have demonstrated our relative stability and unwavering loyalty towards Germany, perhaps they could begin investing abroad, in Ethiopia, to help combat the effects of Black Monday and, in the process, help better develop Ethiopia."
-ETH_German_Aid_desc:0 "We will ensure Germany does not forgot the assistance we’d provided them with during the Weltkrieg. German investors, private and state-sponsored, will help bring prosperity to Ethiopia."
-ETH_Debt_desc:0 "Upon the conclusion of the Weltkrieg, our nation debt had, and has continued to, spiralled out of control. Sorely needed reforms cannot be enacted until the issue of the debt has been fully dealt with."
-ETH_German_Military_Mission_desc:0 "Since we’ve already reached out to Germany with regards to receiving investment and aid, it would also be in our best interest to request military advisers in order to learn how to better drill our soldiers, improve our tactics, and, overall, modernise our army."
-ETH_Tax_Church_desc:0 "Alas, we must turn to taxing the church as the funds are desperately required by the empire to pay off its debt."
-ETH_Tax_Slaveowners_desc:0 "A large majority, if not all, slaveowners are well off. By taxing slaves, we can extract more wealth from the extremely well-to-do citizens of our nation. While this may be seen as controversial by some, it will be a great boon to our budget."
-ETH_Tax_Oromo_desc:0 "The Oromo people have been granted many privileges. We will need to end them in order to promote equality within the empire and improve our budget and, by extension, our ability to pay off our debt."
+ETH_Nationalised_Railroad_desc:0 "우리는 이제 우리의 철도를 국유화해서 그들을 제국의 재산으로 보장했습니다. 우리는 그것들을 잘 관리해서 화물과 병력의 수송이 빠르고 효율적으로 이뤄지게 할 것입니다."
+ETH_Privatised_Railroad_desc:0 "우리는 독일 소유의 철도가 계속해서 독일인들에게 관리되도록 할 것이지만 그들을 지속적으로 감시해서 그 품질이 최상을 유지하도록 보장할 것입니다."
+ETH_Expand_Railroad_desc:0 "현재의 철도 시스템을 확장하는 일은 우리 나라의 장기적 이익을 위해 필수적입니다. 병참선, 상품의 분배, 군대의 이동은 모두 똑같이 중요하고 우리의 나라를 풍요롭게 할 것입니다. 다행히도 황제는 이동 수단의 중요성을 이해하고 있습니다."
+ETH_Southern_Expansion_desc:0 "우리의 철도 확장 계획의 다음 단계는 제국의 남부 지방을 우리의 다른 기반 시설과, 잘하면 우리 나라의 다른 지역과 연결하는 것입니다."
+ETH_Expand_Into_Eritrea_desc:0 "우리의 철도 확장 계획의 다음 단계는 제국의 유일한 해안 지역인 에리트레아를 우리의 다른 지역과 연결하고 거기 사는 사람들의 재산을 증진시키고 지역의 상품을 더 잘 순환시키는 것입니다."
+ETH_Impose_Amharic_desc:0 "민족적으로 동일하지 않음에도 에리트레아는 에리트레아에는 미래에 우리에게 위협이 될 수 있는 티그라이 엘리트들이 많이 있습니다. 우리는 언어의 장벽이 어떤 이점도 가지지 않고 에리트레아는 에티오피아라는 개념을 이해시키는 단계를 밟아야합니다."
+ETH_Tribe_Intergration_desc:0 "우리는 에리트레아의 지배권을 장악할 수 있습니다... 그들에게 부차적인 인센티브를 제공한다면요."
+ETH_Officer_Intergration_desc:0 "우리의 베테랑 전투원 중 많은 수는 이탈리아 인들 아래에서 복무했고 나머지는 해방 후의 사설 민병대 하에 있었습니다. 우리는 이제 우리가 적용해왔던 것과 같은 원칙을 적용해야 하며 에리트리아의 세력을 에티오피아 군으로 균일하게 통합하기 위한 단계를 밟아야 합니다. "
+ETH_Construct_Naval_Base_desc:0 "우리는 아스마라에 너무나 거대해져서 제국의 진정한 해군력을 선보이게 되면 오늘의 해상 제국들을 날려버리게 될 항구를 세우는 데에는 예산을 아끼지 않을 것입니다!"
+ETH_Intergration_Of_Eritrea_desc:0 "20년이 지나며 에리트레아의 불온은 거의 가라앉았고 지역에 거주하는 사람들은 제국에 긍정적인 관점을 보이기 시작했습니다. 가까운 미래에는 잠재적인 불온조차 감소하기 시작할 것으로 보입니다. "
+ETH_Develop_Eritrea_desc:0 "에리트레아에 거의 투자하지 않았던 이탈리아의 제국주의자들과는 달리 좋은 의도를 보여줄 목적으로서 우리는 지역에 막중한 투자를 시작할 것입니다."
+ETH_Invest_In_Industry_desc:0 "산업화는 진보하기 위한 유일한 길입니다. 제국이 생산을 신장하기 위해 더 많은 공장을 필요로 할 때 우리는 이 중추적인 정책을 포기할 수 없을 것입니다."
+ETH_Tribal_Modernisation_desc:0 "우리는 부족 집단들과 다른 소수 집단들의 권리를 보장할 것입니다. 그들이 그들의 의무를 다하는 동안에는!"
+ETH_Southern_Industrial_Expansion_desc:0 "우리는 우리의 산업화 프로그램을 확장하고 우리 나라의 남쪽 지방에 새로운 공장을 건설할 것입니다. 그렇게 하면 이 지역의 경제적 이익과 일자리는 더 잘 분배되어 생산성과 수익성을 폭발시킬 것입니다."
+ETH_Military_Industrial_Expansion_desc:0 "세월이 지나며 우리의 군이 더 높은 품질의 장비와 충분한 보급을 받아야할 필요가 있음은 명백해졌습니다. 우리는 우리의 군인들이 제국을 더욱 잘 지킬 수 있도록 무기와 보급품의 대량 생산을 시작할 것입니다."
+ETH_German_Investment_desc:0 "우리의 상대적인 안정성과 독일을 향한 흔들리지 않는 충성을 보여준 이후 아마 그들은 검은 월요일의 효과를 제거하기 위한 해외 투자를 에티오피아에서 시작할 수 있을 것이고 그 과정에서 에티오피아를 더 발전시키는 것을 도와줄 것입니다."
+ETH_German_Aid_desc:0 "우리는 독일이 세계대전 중에 우리가 그들에게 보냈던 도움을 잊지 않도록 할 것입니다. 개인과 공공의 독일인 투자자들은 에티오피아에 번영을 가져오는데 도움을 줄 것입니다."
+ETH_Debt_desc:0 "세계대전이 결말지어지며 우리 나라의 채무는 통제불능으로 급증했고 지금까지도 이어집니다. 정말로 필수적인 개혁은 채무 문제가 완전히 해결되기 전까지는 실행될 수 없습니다."
+ETH_German_Military_Mission_desc:0 "우리가 투자와 원조를 받을 목적으로 독일에 접촉한 이래로, 우리의 병사들을 더 잘 훈련시키고, 전략을 향상시키고, 최종적으로는 우리의 군을 현대화시킬 방법을 배우기 위해 군사 전문가를 요청하는 일 역시 우리의 최고의 관심사가 되었습니다."
+ETH_Tax_Church_desc:0 "안타까운 일이지만 제국이 채무를 상환하기 위한 자금을 필사적으로 찾고 있는 관계로 교회에 세금을 거두도록 해야만 합니다."
+ETH_Tax_Slaveowners_desc:0 "전부는 아니어도 많은 노예주들은 부유합니다. 우리는 노예에 세금을 매김으로써 우리 나라의 지나치게 부요한 사람들로부터 재산을 착출해낼 수 있을 것입니다. 이것은 혹자에 의해 논쟁거리가 될 수 있겠지만 우리의 예산에는 큰 혜택이 될 것입니다."
+ETH_Tax_Oromo_desc:0 "오로모인들은 많은 특권들을 수여받아 왔습니다. 우리는 제국 내에서 평등을 장려하고 예산을 증가시키며 더 나아가서 우리의 채무까지 상환할 능력을 얻기 위해 특권들을 폐지할 필요가 있습니다."
 ETH_Tax_Eritrea_desc:0 "We’d freed the Eritreans upon the conclusion of the Weltkrieg and granted them special privileges within the empire. However, the time for them has ended as most Eritreans see themselves as Ethiopians anyway and, if they truly believe themselves worthy of our great nation, they must begin contributing towards the prosperity of the empire."
 ETH_Budget_desc:0 "Due to budget reform and readjustment, we can finally begin the next step of the Emperor’s plan: reformation."
 ETH_Haile_desc:0 "Halie Selassie I is a reformer in the best possible way. He is a dynamic man who understands what is required to modernise Ethiopia and drag it out of the past, which it has been stuck in for far too long. While the path of modernisation will not be easy, it says a lot about the King’s character and his willingness to help his nation."
