--- a/Kaiserreich Korean Translation/localisation/KR_Fengtian_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Fengtian_l_english.yml
@@ -1,7 +1,7 @@
 l_english:
 
 ### Ideas ###
-defections_fng:0 "청을 저버림"
+defections_fng:0 "청을 저버리다"
 JAP_WAR_REP:0 "독일 전쟁배상금"
 JAP_WAR_REP_GER:0 "일본 전쟁배상금"
 JAP_WAR_REP_FULL:0 "독일 전쟁배상금"
@@ -9,19 +9,19 @@ JAP_WAR_REP_GER_FULL:0 "일본 전쟁배상금"
 FNG_CHI_CONQUERED:0 "우리가 중국을 통일하였다"
 FNG_Fortress_Manchuria_i:0 "만주 요새화"
 FNG_Fortress_Manchuria_i_desc:0 "The Yan Mountains to the South, the Lesser Khigan Range to the West, and the Bohai Gulf to the East create a natural fortress around the Manchurian plain, leaving the Shanhai Pass as the only easy point of entry. It is easy to fortify the Northeast when nature has already done so much of the work."
-FNG_The_National_Reclamation_War:0 "The National Reclamation War"
+FNG_The_National_Reclamation_War:0 "국가 개간 전쟁"
 FNG_The_National_Reclamation_War_desc:0 "The time has come to reclaim the South and cast down the regressive Qing. The nation rallies behind its leader in the push toward victory!"
 FNG_Backward_Industry:0 "낙후된 산업"
 FNG_Backward_Industry_desc:0 "While Fengtian may contain the second largest industrial base in East Asia, its size conceals obsolete machinery, inefficient practices, and severe mismanagement. Only extensive reforms, backed by a great deal of investment, can overcome these challenges."
-FNG_Unscrupulous_Governance:0 "Unscrupulous Governance"
+FNG_Unscrupulous_Governance:0 "부도덕한 통치 방식"
 FNG_Unscrupulous_Governance_desc:0 "Despite its claims to the contrary, the Fengtian Government is plagued by endemic corruption, incompetence, and abuse of power. While this is nothing out of the ordinary for China, it impedes the proper functioning of government, and limits support for the regime."
-FNG_Investment_Dearth:0 "Investment Dearth"
+FNG_Investment_Dearth:0 "투자의 부족"
 FNG_Investment_Dearth_desc:0 "The economic collapse that followed Fengtian's entry into the Civil Wars severely damaged its fiscal base and financial credibility, leaving the government with few creditors, and private businesses with severely limited options. Few have the confidence to invest in Fengtian, either at home or abroad."
-FNG_Investment_Dearth_Japanese:0 "Limited Chinese Investment"
+FNG_Investment_Dearth_Japanese:0 "제한된 중국 투자"
 FNG_Investment_Dearth_Japanese_desc:0 "Thanks to government incentives Japanese investment has grown, but there is still an overall shortage. Local Chinese investment could provide the funds we need."
-FNG_Investment_Dearth_Chinese:0 "Limited Japanese Investment"
+FNG_Investment_Dearth_Chinese:0 "제한된 일본 투자"
 FNG_Investment_Dearth_Chinese_desc:0 "Thanks to government incentives private Chinese investment has grown, but there is still an overall shortage. Japanese investment could provide the funds we need."
-FNG_Year_of_Righteous_Effort:0 "The Year of Righteous Effort"
+FNG_Year_of_Righteous_Effort:0 "의로운 노력의 해"
 FNG_Year_of_Righteous_Effort_desc:0 "With the Grand Marshal's Proclamation, the nation is united in a strenuous effort to prepare for the rigours of war."
 FNG_Land_Reform_Underway:0 "토지 계획 진행"
 FNG_Land_Reform_Underway_desc:0 "Land reform is a long and difficult process, and will cost the state in the short term, but prosperity awaits over the horizon."
@@ -29,35 +29,35 @@ FNG_Japanese_Aid_Cut:0 "일본 원조 중단"
 FNG_Japanese_Aid_Cut_desc:0 "Japan has cut all aid to the government as a means of punishment for what it sees as insubordination."
 FNG_Buying_Silver:0 "은 매입"
 FNG_Buying_Silver_desc:0 "Silver, by definition, is expensive and the government is presently buying a great deal of it. Once the reserve is full, however, it will have a reliable basis for currency and credit."
-FNG_Central_Bank_Collapse:0 "Central Bank Collapse"
+FNG_Central_Bank_Collapse:0 "중앙 은행 붕괴"
 FNG_Central_Bank_Collapse_desc:0 "The Central Bank seems to have misplaced millions of taels worth of silver precisely as Japanese banks called for their loans to be repaid. How could this have happened?"
-FNG_Japanese_Military_Mission:0 "Japanese Military Mission"
+FNG_Japanese_Military_Mission:0 "일본 군사 고문단"
 FNG_Japanese_Military_Mission_desc:0 "Japan has had a military presence in Fengtian since at least the early twenties, but the intervention of 1926 saw the dispatch of a permanent military mission, which provides military aid and 'advises' the government. Unfortunately, ignoring this advice can have dire consequences."
-FNG_Educational_Vacuum:0 "Educational Vacuum"
+FNG_Educational_Vacuum:0 "교육 공백"
 FNG_Educational_Vacuum_desc:0 "The sudden absence of Japanese teachers, professors, and scientists has left a troublesome educational vacuum. Foreign and domestic replacements can be found, but at a cost, and not without great inconvenience."
-FNG_Post-Colonial_Chaos_1:0 "Post-Colonial_Chaos"
+FNG_Post-Colonial_Chaos_1:0 "독립 이후의 혼란"
 FNG_Post-Colonial_Chaos_1_desc:0 "Even at its most limited, Mantetsu's grip on Fengtian's economy and infrastructure was tight, and now as its carefully laid systems and structures collapse, the country as a whole is crippled. It will take time to rebuild and reorganise, but if Mantetsu's influence was greater, it could have been far worse."
-FNG_Post-Colonial_Chaos_2:0 "Post-Colonial Chaos"
+FNG_Post-Colonial_Chaos_2:0 "독립 이후의 혼란"
 FNG_Post-Colonial_Chaos_2_desc:0 "Mantetsu's grip on Fengtian's politics, economy, and infrastructure was tight, and now as its carefully laid systems and structures collapse, the country as a whole is crippled. It will take time to rebuild and reorganise, but if Mantetsu's influence was even greater, it could have been worse."
-FNG_Post-Colonial_Chaos_3:0 "Post-Colonial_Chaos"
+FNG_Post-Colonial_Chaos_3:0 "독립 이후의 혼란"
 FNG_Post-Colonial_Chaos_3_desc:0 "Mantetsu's grip on Fengtian's politics, economy and infrastructure was choking, and now as its carefully laid systems and structures collapse, the country as a whole is utterly crippled. It will take a very long time to rebuild and reorganise."
-FNG_Disastrous_Governance:0 "Disastrous Governance"
+FNG_Disastrous_Governance:0 "처참한 통치 방식"
 FNG_Disastrous_Governance_desc:0 "The Recovery League's thorough grip on power has begun to fray the state's already tenuous grasp on legitimacy."
-FNG_Army_Dominance:0 "Army Dominance"
+FNG_Army_Dominance:0 "군대 지배력"
 FNG_Army_Dominance_desc:0 "The Zhang Clique and the Army have a thorough grip on government, causing the other political factions to turn to unconventional means to limit their control. Unfortunately, these means and the Zhang Clique's abuses of power have dire consequences."
-FNG_Plutocratic_Exploitation:0 "Plutocratic Exploitation"
+FNG_Plutocratic_Exploitation:0 "금권 정치 이용"
 FNG_Plutocratic_Exploitation_desc:0 "The Communications Clique's iron grip on the nation's government has allowed it to engage in an entirely new level of exploitation and greed, reducing the state's legitimacy and attracting unprecedented Japanese political pressure."
-FNG_Japan_Deal:0 "Zaibatsu Investment"
-FNG_Ma_Gold_Transfer_Negative:0 "The Ma Gold Transfer"
+FNG_Japan_Deal:0 "일본 재벌 투자"
+FNG_Ma_Gold_Transfer_Negative:0 "마 금 전송"
 FNG_Ma_Gold_Transfer_Negative_desc:0 "In return for his defection, Ma Zhanshan demanded three million dollars worth of gold, which is now being transferred over time."
-FNG_Ma_Gold_Transfer_Positive:0 "Ill Gotten Gains"
+FNG_Ma_Gold_Transfer_Positive:0 "부정 이득"
 FNG_Ma_Gold_Transfer_Positive_desc:0 "By double-crossing Fengtian's enemies, Ma Zhanshan returned with nearly six hundred pounds of gold, equivalent in worth to three million dollars."
-FNG_Imperial_Han_Suppression:0 "Imperial Han Society Repression"
-FNG_Intel_Leak:0 "Intelligence Leak"
+FNG_Imperial_Han_Suppression:0 "제국 한족 사회 억압"
+FNG_Intel_Leak:0 "정보 누출"
 FNG_Intel_Leak_desc:0 "Through gross incompetence, or for reasons even less virtuous, the Head of Intelligence has leaked vital intelligence to the government's enemies."
-FNG_Legations_Deal:0 "The Legations Deal"
+FNG_Legations_Deal:0 "공사관 거래"
 FNG_Legations_Deal_desc:0 "Through some clever politiking, and perhaps some backroom 'negotiation', the Economic Minister has secured a valuable trade deal with the Legation Cities."
-FNG_War_of_Words:0 "War of Words"
+FNG_War_of_Words:0 "말의 전쟁"
 FNG_War_of_Words_desc:0 "Sometimes the most decisive battles are fought and won in hearts and minds."
 
 ### Informal Empire Mechanic ###
@@ -73,11 +73,11 @@ FNG_informal_empire_5:0 "만철의 지배"
 FNG_informal_empire_5_desc:0 "Japanese expertise and Mantetsu's influence propels Fengtian forward in ways previously thought impossible, but for all intents and purposes most meaningful control has passed from the hands of the Assembly to Japan. The Grand Marshal stands alone before Mantetsu's overwhelming power in the country."
 
 ### Tooltips ###
-FNG_expel_japanese_officers_tooltip:0 "§RCompleting this focus will have dire consequences for Fengtian's relationship with Japan.§!\n"
-FNG_proclamation_tooltip:0 "§ROnly complete this focus when prepared to begin the Reclamation War within a year.§!\n"
+FNG_expel_japanese_officers_tooltip:0 "§RCompleting this focus will have dire consequences for Fengtian's relationship with Japan.§!"
+FNG_proclamation_tooltip:0 "§ROnly complete this focus when prepared to begin the Reclamation War within a year.§!"
 FNG_mantetsu_collaboration_unlock:0 "Unlocks the §YMantetsu Industrial Subsiduaries§! company.\n"
 FNG_yamato_hotel_unlock:0 "Unlocks §YAircraft Manufacturing Companies§!.\n"
-FNG_manufacture_minsheng_unlock:0 "Unlocks the §YMinsheng Automobile Company§!.\n"
+FNG_manufacture_minsheng_unlock:0 "Unlocks the §YMinsheng Automobile Company§!."
 FNG_incentivize_zaibatsu_arms_manufacture_unlock:0 "Unlocks the §YMitsubishi Heavy Industries§! company.\n"
 FNG_standardize_equipment_unlock:0 "Unlocks the §YShenyang Arsenal§! company.\n"
 FNG_remove_investment_dearth:0 "Required to remove the §YInvestment Dearth§! national spirit.\n"
@@ -89,7 +89,7 @@ FNG_one_time_cost:0 "(This is a one-time cost)\n"
 FNG_begin:0 "게임이 시작됩니다\n"
 FNG_recommended:0 "Briefings are recommended for first time players\n"
 FNG_imperial_han_suppression:0 "The §YImperial Han Society§! is supressed.\n"
-FNG_japan_denies_provinces:0 "§RCompleting this focus could have dire consequences for Fengtian's relationship with Japan.§!\n"
+FNG_japan_denies_provinces:0 "§RCompleting this focus could have dire consequences for Fengtian's relationship with Japan.§!"
 FNG_repeating:0 "This event will continue to appear until the crisis has ended\n"
 FNG_event_return:0 "Return to the §Yprevious event§!"
 FNG_army_path:0 "§GAdds§! Bonus Political Power to §YArmy Focuses§!\n"
@@ -235,35 +235,35 @@ FNG_national_populist_party:0 "한족 황실"
 FNG_national_populist_party_long:0 "한족 황실"
 
 ### Leader Descriptions ###
-FNG_zhang_zuolin_desc:0 "Born to an impoverished family near Shenyang, Zhang Zuolin began his meteoric rise as a bandit exploiting the chaotic military situation of the late Guangxu Era. Despite his illiteracy and lack of a formal education, the 'Old Marshal' is capable and aware of his own deficiencies, happy to seek advice and delegate where necessary.\n\nHowever, he is also known for a short temper and an unforgiving nature, readily holding deep grudges. Zhang is also sometimes greatly self-centred, formerly crashing the entire Northeastern economy to support his war efforts, and so in ideological terms he could be called staunchly 'Pro-Zhang'."
+FNG_zhang_zuolin_desc:0 "선양 근처의 가난한 가정에서 태어난 장 쭤린은 도적으로써 이전 광서 시대의 무질서한 군사적 상황을 이용하여 급부상하기 시작했습니다. 문맹과 정규 교육이 부족함에도 불구하고, '늙은 원수'는 자신의 부족함을 잘 알고 있으며, 조언을 구하고 필요한 경우 위임하는 것을 기쁘게 생각하고 있습니다. 그러나 그는 급하고 고약한 성질 때문에 쉽게 원한을 품는 것 으로도 유명합니다. 장 쭤린은 또한 때때로 상당히 자기중심적이기도 하고, 이전에는 동북의 경제 전체를 그의 전쟁물자를 지원하기 위해 무너뜨렸으며, 그래서 이데올로기적 용어로 그는 '프로-장'이라고 불릴 수 있었습니다."
 
 ### Opinion Modifiers ###
-FNG_LEAVES_FIGHT_JAP:0 "Fengtian breaks away from Japan"
-FNG_LEAVES_FIGHT:0 "Fengtian breaks away from Japan"
-FNG_JOINS_QIE_JAP:0 "Fengtian Joins the Qing"
-FNG_JOINS_QIE:0 "Fengtian Joins the Qing"
-FNG_HELP_QIE_JAP:0 "Fengtian helps the Qing"
-FNG_HELP_QIE:0 "Fengtian helps the Qing"
-JAP_ALL_FNG:0 "Japan Allies with Fengtian"
-JAP_NO_ALL_FNG:0 "Japan doesn't ally with Fengtian"
-TRM_ALL_FNG:0 "Transamur allies with Fengtian"
-TRM_ALL_FNG_JAP:0 "Transamur allies with Fengtian"
-QIE_NO_ALL_JAP:0 "Qing refuses Japanese Alliance"
-QIE_NO_ALL_JAP_CHI:0 "Qing refuses Japanese Alliance"
-FNG_GOV_JAP:0 "Japan chose the Fengtian Government"
-FNG_GOV_PEP:0 "The People chose the Fengtian Government"
-FNG_GOV_JAP_Zhang:0 "Japan chose Zhang Xueliang"
-FNG_GOV_JAP_DECIDE:0 "Japan let us Chose our Head of Government"
-FNG_GOV_MET:0 "Fengtian chooses Feng Yuxiang Methodist"
-SQI_TRUE_CHRIS:0 "Shangqing are the True Christians"
-FNG_GOV_MET_JAP:0 "Fengtian chooses Feng Yuxiang Methodist"
-FNG_SQI_ALL:0 "Fengtian allies with Shangqing"
-FNG_SQI_ALL_JAP:0 "Fengtian allies with Shangqing"
-FNG_NO_ALL_SQI:0 "Fengtian doesn't ally with Shangqing"
-FNG_LEAVES_JAP:0 "Fengtian breaks away from Japan"
-SQI_ALL_FNG:0 "Shangqing Allies Fengtian"
-SQI_NO_ONE_NAT:0 "Refuse all Offers"
-FNG_SQI_UNION_JAP:0 "Fengtian and Shangqing United"
+FNG_LEAVES_FIGHT_JAP:0 "봉천이 일본으로부터 독립하다"
+FNG_LEAVES_FIGHT:0 "봉천이 일본으로부터 독립하다"
+FNG_JOINS_QIE_JAP:0 "봉천이 청에 합류하다"
+FNG_JOINS_QIE:0 "봉천이 청에 합류하다"
+FNG_HELP_QIE_JAP:0 "봉천이 청을 도와주다"
+FNG_HELP_QIE:0 "봉천이 청을 도와주다"
+JAP_ALL_FNG:0 "일본이 봉천과 동맹을 맺다"
+JAP_NO_ALL_FNG:0 "일본은 봉천과 동맹을 맺지 않았다"
+TRM_ALL_FNG:0 "트란스아무르가 봉천과 동맹을 맺다"
+TRM_ALL_FNG_JAP:0 "트란스아무르가 봉천과 동맹을 맺다"
+QIE_NO_ALL_JAP:0 "청이 일본과의 동맹을 거절하다"
+QIE_NO_ALL_JAP_CHI:0 "청이 일본과의 동맹을 거절하다"
+FNG_GOV_JAP:0 "일본이 봉천 정부를 선택하다"
+FNG_GOV_PEP:0 "사람들이 봉천 정부를 선택하다"
+FNG_GOV_JAP_Zhang:0 "일본이 장쉐량을 선택하다"
+FNG_GOV_JAP_DECIDE:0 "일본이 우리의 손으로 정부를 선택하게 하다"
+FNG_GOV_MET:0 "봉천이 감리교 신자 펑위샹을 선택하다"
+SQI_TRUE_CHRIS:0 "상청은 진정한 기독교도다"
+FNG_GOV_MET_JAP:0 "봉천이 감리교 신자 펑위샹을 선택하다"
+FNG_SQI_ALL:0 "봉천이 상청과 동맹을 맺다"
+FNG_SQI_ALL_JAP:0 "봉천이 상청과 동맹을 맺다"
+FNG_NO_ALL_SQI:0 "봉천은 상청과 동맹을 맺지 않았다"
+FNG_LEAVES_JAP:0 "봉천이 일본으로부터 독립하다"
+SQI_ALL_FNG:0 "상청이 봉천과 동맹을 맺다"
+SQI_NO_ONE_NAT:0 "모든 제안을 거절하다"
+FNG_SQI_UNION_JAP:0 "봉천과 상청이 연합하다"
 
 ### New Opinion Modifiers ###
 FNG_MANTETSU_COLLAB:0 "만철의 공동작업"
