--- a/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_American_Civil_War_l_english.yml
@@ -152,7 +152,7 @@ amcivwar.12.a:0 "재앙이 시작되었다. 공화국을 지켜내자"
 amcivwar.12.b:0 "혁명이 시작되었다. 노동자들을 지켜내자 (노동 연맹으로 플레이합니다)"
 
 amcivwar.13.t:0 "제2차 미국 내전"
-amcivwar.13.d:0 "혼돈이 이 땅을 집어삼켰습니다. 미국 전역에서 시민군이 소집되었고, 전쟁의 불길이 타오르며 부모형제가 서로 싸우면서 제2차 미국 내전이 그 막을 열었습니다."
+amcivwar.13.d:0 "혼돈이 이 땅을 집어삼켰습니다. 미국 전역에서 시민군이 소집되었고, 전쟁의 불길이 타오름과 동시에 부모형제가 서로 싸우면서 제2차 미국 내전이 그 막을 열었습니다."
 amcivwar.13.a:0 "이건 아니야…"
 
 ### Set Up Events - Garner ###
@@ -167,7 +167,7 @@ amcivwar.15.a:0 "재앙이 시작되었다. 공화국을 지켜내자"
 amcivwar.15.b:0 "혁명이 시작되었다. 노동자들을 지켜내자 (노동 연맹으로 플레이합니다)"
 
 amcivwar.16.t:0 "제2차 미국 내전"
-amcivwar.16.d:0 "혼돈이 이 땅을 집어삼켰습니다. 미국 전역에서 시민군이 소집되었고, 전쟁의 불길이 타오르며 부모형제가 서로 싸우면서 제2차 미국 내전이 그 막을 열었습니다."
+amcivwar.16.d:0 "혼돈이 이 땅을 집어삼켰습니다. 미국 전역에서 시민군이 소집되었고, 전쟁의 불길이 타오름과 동시에 부모형제가 서로 싸우면서 제2차 미국 내전이 그 막을 열었습니다."
 amcivwar.16.a:0 "이건 아니야…"
 
 ### Set Up Events - Landon ###
@@ -183,7 +183,7 @@ amcivwar.18.a:0 "재앙이 시작되었다. 공화국을 지켜내자"
 amcivwar.18.b:0 "혁명이 시작되었다. 노동자들을 지켜내자 (노동 연맹으로 플레이합니다)"
 
 amcivwar.19.t:0 "제2차 미국 내전"
-amcivwar.19.d:0 "혼돈이 이 땅을 집어삼켰습니다. 미국 전역에서 시민군이 소집되었고, 전쟁의 불길이 타오르며 부모형제가 서로 싸우면서 제2차 미국 내전이 그 막을 열었습니다."
+amcivwar.19.d:0 "혼돈이 이 땅을 집어삼켰습니다. 미국 전역에서 시민군이 소집되었고, 전쟁의 불길이 타오름과 동시에 부모형제가 서로 싸우면서 제2차 미국 내전이 그 막을 열었습니다."
 amcivwar.19.a:0 "이건 아니야…"
 
 ### Set up Events - Re-enforcements ###
@@ -320,9 +320,9 @@ amcivwar.45.c:0 "프레드릭 이브스 로드"
 ### AUS Flavor Events ###
 
 amcivwar.46.t:0 "사리사욕에 호소"
-amcivwar.46.d:0 "찰스 린드버그는 휴이 롱과 헨리 포드, 프레드 코흐, 그리고 H L 헌트를 포함한 여러 주요 기업가들과의 만남을 주선했습니다. 이 자들은 연방정부의 명령에 따라 남부의 공장과 정유소를 폐쇄하려고 했습니다. 하지만 그 대신 이들은 린드버그에 의해 몇 가지 조건에 따라 휴이 롱을 옹호하고 자신들의 산업력을 미주 연합으로 이전하도록 설득당합니다. 이들은 휴이 롱이 전쟁에서 승리할 경우에 정치 직책을 부여해 줄 것뿐만 아니라 비참한 경제상황 속에서 자신들에게는 일종의 정치적 예외를 보장해 줄 것을 요구합니다. 만약 롱이 그들의 요구에 동의한다면, 그것은 롱에게 더 큰 산업력을 줄 것이 분명하지만, 많은 롱의 지지자들은 그가 그의 정치적 이상을 버릴 작정인지 궁금해 할 것입니다. 그럼에도 불구하고 이 암울한 시기에 이런 제안을 거절하는 것은 그 대가가 큽니다."
-amcivwar.46.a:0 "그들의 사리사욕에 동의한다"
-amcivwar.46.b:0 "그들의 사리사욕을 거절한다"
+amcivwar.46.d:0 "찰스 린드버그는 휴이 롱에게 헨리 포드, 프레드 코흐, 그리고 H L 헌트를 포함한 여러 주요 기업가들과의 만남을 주선했습니다. 이 자들은 연방정부의 명령에 따라 남부의 공장과 정유소를 폐쇄하려고 했습니다. 하지만 그 대신 이들은 린드버그에 의해 몇 가지 조건에 따라 휴이 롱을 옹호하고 자신들의 산업력을 미주 연합으로 이전하도록 설득당했습니다. 이들은 휴이 롱이 전쟁에서 승리할 경우에 정치 직책을 부여해 줄 것뿐만 아니라 비참한 경제상황 속에서 자신들에게는 일종의 정치적 예외를 보장해 줄 것을 요구합니다. 만약 롱이 이들의 요구에 동의한다면 상당한 산업력을 확보할 수 있겠지만, 롱의 지지자 대다수는 그가 자신의 정치적 이상을 버릴 작정인지 궁금해 할 것입니다. 그럼에도 불구하고 이 암울한 시기에 이런 제안을 거절한다는 것은 그 대가가 큽니다."
+amcivwar.46.a:0 "저들의 사리사욕에 동의한다"
+amcivwar.46.b:0 "저들의 사리사욕을 거절한다"
 
 amcivwar.47.t:0 "전시산업위원회"
 amcivwar.47.d:0 "기업인들은 휴이 롱을 대신하여 전시산업을 조율하기 위해 표면상으로는 휴이 롱을 지지하는 위원회를 설립했습니다. 휴이 롱 자신이 미국을 위해 투쟁하는 기념비적인 과업을 수행하기 위해 정부를 형성한 것처럼, 기업인들도 스스로 과업을 수행하기 위한 산업 기관을 설립했습니다. 비록 자신들이 약속받았던 모든 권력을 가지고 있지는 않지만, 그들은 스스로를 공화국의 병기창이라고 선언했고, 반유대적이지만 존경받는 장군인 조지 반 혼 모즐리가 위원회를 지도합니다."
