--- a/Kaiserreich Korean Translation/localisation/KR_Ukraine_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ukraine_l_english.yml
@@ -460,17 +460,17 @@ UKR_Crisis_Coalition:0 "동맹의 위기"
 UKR_Crisis_Coalition_desc:0 "비록 생디칼리스트들의 위협은 대부분 정부 개혁으로 인해 사라졌지만, 'ViN'과 'OUN'은 우크라이나 국민들 사이에서 너무 많은 인기를 얻었고, 그들의 추종자들은 우발적으로 민족주의적인 열정으로 우리나라를 분열시켰습니다. 유럽의 상황이 빠르게 악화됨에 따라 이러한 상황은 계속 될 수 없습니다."
 
 UKR_Dissolve_Rada:0 "라다 해체"
-UKR_Dissolve_Rada_desc:0 "Our Supreme Rada (Parliament) has always been too left and never really supported Skoropadsky's policies as Hetman. The King has been shaken out of his legislative stupor to grant Skoropadsky the authority to dissolve the Rada and form instead a loyal State Senate, stacked primarily with regime puppets and useful officials from different Ukrainian regions."
+UKR_Dissolve_Rada_desc:0 "우리의 최고 라다(의회)는 항상 너무 좌천적이였으며 결코 헤트만으로서의 스코로파즈키의 정책을 지지하지 않았습니다. 국왕은 자신의 입법적 무모에서 벗어나 라다를 해산하고 정권 인형과 다양한 우크라이나 지역에서 온 유능한 관리들로 주된 충직한 주 상원의원을 창설할 권한을 스코로파즈키에게 부여했습니다."
 UKR_Skoropadsky_Policy:0 "우크라이나 통일"
-UKR_Skoropadsky_Policy_desc:0 "The relations between the Russians and the Ukrainians in Ukraine are good enough, but various powers try to depict them as an eternal struggle between the West and the East. We must stop this chauvinistic propaganda, but our aim is also to show that despite the common past and good relations with Russia, we are independent now and will always be."
+UKR_Skoropadsky_Policy_desc:0 "러시아와 우크라이나의 관계는 충분하지만, 다양한 강대국들은 그들을 동서간의 영원한 투쟁으로 묘사하려 하고 있습니다. 우리는 이러한 우월주의적 선전을 중단해야 하지만, 우리의 목표는 러시아와의 공통된 과거와 좋은 관계에도 불구하고, 우리는 현재와 앞으로도 계속 독립하고 있다는 것을 보여줘야 합니다."
 UKR_Army_Reforms:0 "직업군"
-UKR_Army_Reforms_desc:0 "It is obvious that the Ukrainian army is incomparable to the Russian and German behemoths, and yet it is still stronger than any neighbouring army. That's why Skoropadsky has proposed re-orientating our army towards a smaller professional force. It will help us maintain our security, and will allow us to reduce our costly defence spending."
+UKR_Army_Reforms_desc:0 "우크라이나군은 거대한 짐승인 러시아와 독일과 비교할 수 없지만 여전히 인접 군대보다는 강력합니다. 그래서 스코로파즈키는 우리 군대를 작지만 전문적인 인력으로 재배치 할 것을 제안했습니다. 이는 우리의 안보를 유지하는데 도움이 되며 값비싼 국방 지출을 줄일 수도 있습니다."
 UKR_Peasant_State:0 "농민 국가"
-UKR_Peasant_State_desc:0 "Our peasants have always played a significant role in the country and its economy. With extra money available from our reduced military spending, we can reduce taxes for the poor until our agriculture recovers from Black Monday and we will become the breadbasket of Europe once again."
+UKR_Peasant_State_desc:0 "우리 농민들은 항상 국가와 경제에서 중요한 역할을 해왔습니다. 우리의 감소된 군비 지출로 얻을 수 있는 여분의 돈으로, 우리의 농업이 검은 월요일에서 회복될 때까지 빈곤층에 대해 세금을 감축 해줄 수 있으며 우리는 다시 유럽의 밥통이 될 것 입니다."
 UKR_Prohibit_Syndicalism:0 "생디칼리즘 금지"
-UKR_Prohibit_Syndicalism_desc:0 "We have reached an understanding with the pro-Russian circles, pacified the various Ukrainian movements and helped make the peasantry loyal to us. Now we have to deal with the Syndicalists. Our mass media will start a massive propaganda campaign, showing the Syndies as a malignant tumour on Slavdom. Our efforts will eventually enable us to ban many notorious left parties."
+UKR_Prohibit_Syndicalism_desc:0 "우리는 친러 집단들과의 합의에 도달했고, 다양한 우크라이나의 움직임을 진정시켰으며 농민들이 우리에게 충성하도록 도왔습니다. 이제 우리는 생디칼리스트들을 다뤄야만 합니다. 우리 대중 매체는 생디칼리스트들을 슬라브족의 악성 종양으로 보여줄 막대한 선전 캠페인을 시작할 것 입니다. 우리의 이러한 노력은 결국 우리가 많은 악명높은 좌파 정당을 금지할 수 있게 해줄 것 입니다."
 UKR_Federalisation:0 "연방화"
-UKR_Federalisation_desc:0 "The Syndicalists, Nationalists and the Russophiles have all tried to impose their ideas on the whole country. This has demonstrated the flaws of the centralised approach of the Hetmanate. If we give our regions more autonomy and weaken the Supreme Rada, we will be able to stop regional debates becoming flashpoints on the national stage to ensure political chaos remains a thing of the past."
+UKR_Federalisation_desc:0 "생디칼리스트, 민족주의자, 러시아인들은 모두 국가 전체에 그들의 생각을 강요하려고 노력해왔습니다. 이것은 헤트만 권력의 중앙집권적 접근법의 결점을 보여주었습니다. 만약 우리 지역의 자치권을 강화하고 최고 라다를 약화시키면 정치적 혼란이 과거의 일로 남을 수 있도록 하고 지역 토론이 국가 무대에서 중대한 일촉즉발의 상황이 되는 것을 막을 수 있을 것 입니다."
 
 UKR_New_Heir:0 "계승 문제"
 UKR_New_Heir_desc:0 "King Vasily, as vigorous in his production of heirs as in running the country, has left the royal succession up for debate. There are only two realistic contenders, Leo Stefan Habsburg or Daniil Skoropadsky. Neither are completely ideal but this question must be solved sooner rather than later."
